Added yes i agree

--- a/javolayemi.html
+++ b/javolayemi.html
@@ -8,6 +8,6 @@
       document.write("My first JavaScript example!")
     </script>
     <noscript>Sorry, your browser does not support JavaScript!</noscript>
-    <p>A browser that does not support JavaScript will display the content inside the noscript element.</p>
+    <p> A browser that does not support JavaScript will display the content inside the noscript element. yes, i totally agree. </p>
   </body>
 </html>
