--- a/javolayemi.html
+++ b/javolayemi.html
@@ -8,6 +8,6 @@
       document.write("My first JavaScript example!")
     </script>
     <noscript>Sorry, your browser does not support JavaScript!</noscript>
-    <p> A browser that does not support JavaScript will display the content inside the noscript element. yes, i totally agree. </p>
+    <p> A browser that doesn't wish to support JavaScript will display the content inside the noscript element. yes, for sure </p>
   </body>
 </html>
